[metadata]
name = clingwrap
summary = clingwrap: wrap up CI artefacts and post them to Google Storage
license = Apache2
description_file = README.md
author = Michael Still
author_email = mikal@stillhq.com
home_page = https://shakenfist.com/clingwrap
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    clingwrap

[entry_points]
console_scripts =
    clingwrap = clingwrap.main:cli

[pbr]
skip_changelog = True
